--- a/ODIN_II/regression_test/benchmark/task/syntax/task.conf
+++ b/ODIN_II/regression_test/benchmark/task/syntax/task.conf
@@ -16,6 +16,7 @@ arch_list_add=k6_frac_N10_frac_chain_mem32K_40nm.xml
 circuits_dir=regression_test/benchmark/verilog/
 
 circuit_list_add=syntax/*.v
+circuit_list_add=syntax/inout-syntax/*.v
 
 synthesis_parse_file=regression_test/parse_result/conf/synth.toml
 simulation_parse_file=regression_test/parse_result/conf/sim.toml
